mejoras para proyecto transbank, ahora acepta data estatica

--- a/src/all-axis-table.css
+++ b/src/all-axis-table.css
@@ -139,6 +139,7 @@ div.table-navbar{
 	.table-js-container table:not(.fixed-column) th.fixed,
 	.table-js-container table:not(.fixed-column) td.fixed{
 		visibility: hidden;
+        width: 1px;
 	}
 }
 @media(max-width:767px) {
